cka-exam/dump3/10-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: envvars-multiiple-secrets
  namespace: kiwi
spec:
  containers:
  - name: test
    image: nginx
