cka-exam/dump3/5-pod-man-sch.yaml
apiVersion: v1
kind: Pod
metadata:
  name: noded
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  nodeSelector:
    disk: nvme
