cka-exam/dump3/6-pod-2-con.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multicontainer
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx:1.21.6
  - name: redis
    image: redis:6.2.6
