cka-exam/dump3/7-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  volumes: 
  - name: shared
    emptyDir: {}
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: shared
      mountPath: /var/log/nginx/
  - name: sidecar
    image: busybox
    volumeMounts:
    - mountPath: /var/log
      name: shared
    command: ["/bin/sh"] 
    args: ["-c", "tail -f /var/log/error.log"]
