cka-exam/dump3/8-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  serviceAccountName: app-dev
  containers:
  - name: kubectl
    image: bitnami/kubectl
    command: ["/bin/sh"]
    args: ["-c", "sleep 4000"]
