cka-exam/dump3/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luau
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /aloha
        pathType: Prefix
        backend:
          service:
            name: aloha
            port:
              number: 54321
