cka-exam/dump3/11-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cherry-control
  namespace: cherry
spec:
  podSelector:
    matchLabels:
      app: pit
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: stem
